Add body content

--- a/index.html
+++ b/index.html
@@ -20,5 +20,69 @@
         <![endif]-->
         <title>Photo Gallery</title>
     </head>
-    <body></body>
+    <body>
+        <main>
+            <article>
+                <div class="container">
+                    <header>
+                        <h1>Most beautiful places in the world</h1>
+                    </header>
+                    <div class="postcard">
+                        <div class="photo1">
+                            <a href="#!">
+                                <img src="img/01.jpg" alt="Taktsang" />
+                            </a>
+                        </div>
+                        <p>Taktsang Trail BT - Paro, Bhutan</p>
+                    </div>
+                    <div class="postcard">
+                        <div class="photo2">
+                            <a href="#!">
+                                <img src="img/02.jpg" alt="Arashiyama" />
+                            </a>
+                        </div>
+                        <p>Arashiyama Bamboo Forest - Kyoto, Japan</p>
+                    </div>
+                    <div class="postcard">
+                        <div class="photo3">
+                            <a href="#!">
+                                <img src="img/03.jpg" alt="Bryce Canyon" />
+                            </a>
+                        </div>
+                        <p>Bryce Canyon National Park - Utah, USA</p>
+                    </div>
+                    <div class="postcard">
+                        <div class="photo4">
+                            <a href="#!">
+                                <img src="img/04.jpg" alt="Taj Mahal" />
+                            </a>
+                        </div>
+                        <p>Taj Mahal - Agra, Uttar Pradesh, India</p>
+                    </div>
+                    <div class="postcard">
+                        <div class="photo5">
+                            <a href="#!">
+                                <img src="img/05.jpg" alt="Serengeti" />
+                            </a>
+                        </div>
+                        <p>Serengeti National Park - Tanzania</p>
+                    </div>
+                    <div class="postcard">
+                        <div class="photo6">
+                            <a href="#!">
+                                <img
+                                    src="img/06.jpg"
+                                    alt="Mù Cang Chải District"
+                                />
+                            </a>
+                            <p>
+                                Mù Cang Chải District - Yên Bái Province, in the
+                                Northeast region of Vietnam
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </article>
+        </main>
+    </body>
 </html>
