Add styles of body

--- a/index.html
+++ b/index.html
@@ -76,8 +76,7 @@
                                 />
                             </a>
                             <p>
-                                Mù Cang Chải District - Yên Bái Province, in the
-                                Northeast region of Vietnam
+                                Mù Cang Chải District - Yên Bái, Vietnam
                             </p>
                         </div>
                     </div>
