Add overlay to the photo3

--- a/index.html
+++ b/index.html
@@ -45,9 +45,17 @@
                     </div>
                     <div class="postcard">
                         <div class="photo3">
-                            <a href="#!">
-                                <img src="img/03.jpg" alt="Bryce Canyon" />
-                            </a>
+                            <div class="overlay">
+                                <a href="#!">
+                                    <img src="img/03.jpg" alt="Bryce Canyon" />
+                                </a>
+                                <a class="link" href="#!">
+                                    <p>
+                                        Foundation year: 1928, area: 145 km
+                                        <sup>2</sup>
+                                    </p>
+                                </a>
+                            </div>
                         </div>
                         <p>Bryce Canyon National Park - Utah, USA</p>
                     </div>
