Add overlay to the photo4

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
             href="https://fonts.googleapis.com/css?family=Open+Sans:400,700&display=swap&subset=latin-ext"
             rel="stylesheet"
         />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+        />
         <!--[if lt IE 9]>
             <script src="bower_components/html5shiv/dist/html5shiv.js"></script>
         <![endif]-->
@@ -61,9 +65,22 @@
                     </div>
                     <div class="postcard">
                         <div class="photo4">
-                            <a href="#!">
-                                <img src="img/04.jpg" alt="Taj Mahal" />
-                            </a>
+                            <div class="overlayT">
+                                <a href="#!">
+                                    <img src="img/04.jpg" alt="Taj Mahal" />
+                                </a>
+                                <a class="link" href="#!">
+                                    <span class="icon">
+                                        <i
+                                            class="fa fa-search"
+                                            aria-hidden="true"
+                                        ></i>
+                                        <p>
+                                            see the album
+                                        </p>
+                                    </span>
+                                </a>
+                            </div>
                         </div>
                         <p>Taj Mahal - Agra, Uttar Pradesh, India</p>
                     </div>
